--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,10 @@ jobs:
                 repo: context.repo.repo,
               });
               if (projects.data.length === 0) {
-                console.log(context.repo.repo);
+                console.log(await github.rest.projects.listForRepo({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+              }););
               } else {
                 console.log(projects.data.map(project => project.name));
               }
