--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,10 +19,7 @@ jobs:
                 repo: context.repo.repo,
               });
               if (projects.data.length === 0) {
-                console.log(await github.rest.projects.listForRepo({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-              }););
+                console.log(projects);
               } else {
                 console.log(projects.data.map(project => project.name));
               }
