--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
       - name: List projects
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.WAREHOUSE }}
+          github-token: ${{ secrets.WATOKEN }}
           script: |
             try {
               const projects = await github.rest.projects.listForRepo({
